<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:background="@drawable/app_bg"
    xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="match_parent"
    >
<LinearLayout
    android:id="@+id/linear"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:text="@string/student_id" />


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/name"
        android:layout_marginLeft="122dp"
        android:layout_marginTop="-20dp"
        android:layout_toRightOf="@+id/textView1"/>

    <TextView
        android:layout_marginTop="20dp"
        android:text="@string/student_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        tools:text="Hammad"
        android:id="@+id/student_name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/name"
        android:layout_marginLeft="122dp"
        android:layout_marginTop="-20dp"
        android:layout_toRightOf="@+id/textView1"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:text="@string/tutorname" />


    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/name"
        android:layout_marginLeft="122dp"
        android:layout_marginTop="-20dp"
        android:layout_toRightOf="@+id/textView3"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:text="@string/classname" />

    <TextView
        android:id="@+id/subject_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text = "English"
        android:layout_marginLeft="122dp"
        android:layout_marginTop="-20dp"
        android:layout_toRightOf="@+id/textView3"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:text="@string/comment" />

    <EditText
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="122dp"
        android:layout_marginTop="-20dp"
        android:layout_toRightOf="@+id/textView4"
        android:inputType="text"
        android:ems="10"/>
</LinearLayout>

    <Button
        android:id="@+id/mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        style="@style/button_style"
        android:layout_marginTop="30dp"
        android:onClick="signin"
        android:layout_below="@id/linear"
        android:text="@string/mark" />

    <Button
        android:id="@+id/print"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mark"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="signin"
        android:visibility="gone"
        android:text="@string/print" />
</RelativeLayout>
