<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:background="@drawable/app_bg"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="match_parent"
    >
    <ImageView android:src="@drawable/icon"
               android:layout_height="350dp"
        android:layout_width="fill_parent" android:id="@+id/mobiIcon"

               android:scaleType="fitXY"
        />
<LinearLayout
    android:layout_marginTop="24dp"
    android:layout_below="@id/mobiIcon"
    android:layout_centerInParent="true"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Button android:text="@string/lab"
            style="@style/button_style"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:id="@+id/lab"
            android:layout_width="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"/>


    <Button android:text="@string/tutoring"
            style="@style/button_style"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:id="@+id/tutoring"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

    <Button
        android:text="@string/back"
        style="@style/button_style"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:id="@+id/back"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
</RelativeLayout>
