<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg">

    <RelativeLayout
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/newstudent"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="40dp"
        android:text="@string/sid"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/sid"
        tools:text="1"
        android:textSize="18sp"
        android:textColor="#000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:layout_marginLeft="124dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="40dp"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2">
    </TextView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="38dp"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/textView3"
        android:layout_below="@id/textView2"
        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="text"
        android:layout_marginLeft="16dp"
        android:layout_toEndOf="@id/textView3"/>
    <Button
        android:id="@+id/save"
        style="@style/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:onClick="signin"
        android:text="@string/save" />

    </RelativeLayout>
</RelativeLayout>
