<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/app_bg"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/labreport"
        android:textAppearance="?android:attr/textAppearanceLarge" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/rel"
            android:layout_below="@id/textView1">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="40dp"
        android:text="@string/fdate"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/fdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_marginLeft="32dp"
        android:layout_toRightOf="@+id/textView2"
        android:ems="10"
        android:inputType="text">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="38dp"
        android:text="@string/tdate"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/tdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/fdate"
        android:ems="10"
        android:inputType="text" />
        </RelativeLayout>

    <Button
        android:id="@+id/fetch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/button_style"
        android:layout_below="@+id/rel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:onClick="submit"
        android:text="@string/create_graph" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/piechart"
        android:layout_below="@id/fetch"
        android:layout_width="match_parent"
        android:layout_height="500dp" />



</RelativeLayout>
</ScrollView>